--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&load=Map" type="text/javascript"></script>
     </head>
     <body>
-        <div id="map" style="width: 600px; height: 400px"></div>
-        <script src="map.js" type="text/javascript"></script>
+        <div id="map" style="width: 600px; height: 600px"></div>
+        <script src="hacking/ShapeLayer.js" type="text/javascript"></script>
+        <script src="dist/bundle.js" type="text/javascript"></script>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
